# elo-rating-system

./: pyproject.toml
elo_rating_system/: UEFA_Womens_EURO_2017.csv  elo_rating_system.py
tests/: conftest.py  test_elo_rating_system.py
