[tool.poetry]
name = "elo-rating-system"
version = "0.1.0"
description = ""
authors = ["jeff73511 <jeff73511@msn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.971"
mkdocs = "^1.3.1"
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
